--- a/ROC/Views/News/Delete.cshtml
+++ b/ROC/Views/News/Delete.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_BackedLayout.cshtml";
 }
 
 <h2>Delete</h2>
