--- a/ROC/Views/News/Edit.cshtml
+++ b/ROC/Views/News/Edit.cshtml
@@ -1,23 +1,24 @@
 ﻿@model ROC.Models.News
-           
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_BackedLayout.cshtml";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Content/CKeditor/ckeditor.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Content/CKeditor/adapters/jquery.js")" type="text/javascript"></script>
 
-
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
     <fieldset>
         <legend>News</legend>
+
+        @Html.HiddenFor(model => model.Id)
+
         <div class="editor-label">
             @Html.LabelFor(model => model.Title)
         </div>
@@ -46,20 +47,20 @@
             @Html.LabelFor(model => model.MainContent)
         </div>
         <div class="editor-field">
-            @Html.TextAreaFor(model => model.MainContent,new { @class = "adminRichText" })
+            @Html.TextAreaFor(model => model.MainContent, new { @class = "adminRichText" })
             @Html.ValidationMessageFor(model => model.MainContent)
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.CategoryID)
         </div>
-        <div class="editor-field">     
-            @Html.DropDownListFor(model=>model.CategoryID,new SelectList(Model.CategorysList,"Id","CategoryName","--Select--"))
+        <div class="editor-field">
+            @Html.DropDownListFor(model => model.CategoryID, new SelectList(Model.CategorysList, "Id", "CategoryName", "--Select--"))
             @Html.ValidationMessageFor(model => model.CategoryID)
         </div>
 
         <p>
-            <input type="submit" value="Create" />
+            <input type="submit" value="Save" />
         </p>
     </fieldset>
 }
