--- a/ROC/Views/NewsCategory/Create.cshtml
+++ b/ROC/Views/NewsCategory/Create.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Create";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_BackedLayout.cshtml";
 }
 
 <h2>Create</h2>
