--- a/ROC/Views/NewsCategory/Details.cshtml
+++ b/ROC/Views/NewsCategory/Details.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Details";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_BackedLayout.cshtml";
 }
 
 <h2>Details</h2>
