--- a/ROC/Views/NewsCategory/Index.cshtml
+++ b/ROC/Views/NewsCategory/Index.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_BackedLayout.cshtml";
 }
 <h2>Index</h2>
 
@@ -21,7 +21,7 @@
     <tr>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+           
             @Html.ActionLink("Delete", "Delete", new { id=item.Id })
         </td>
         <td>
