finish news and news category
Signed-off-by: billmo <panan.songyu@gmail.com>

--- a/ROC/Views/Shared/_NewsLayout.cshtml
+++ b/ROC/Views/Shared/_NewsLayout.cshtml
@@ -13,7 +13,7 @@
                 </tr>
                 <tr bgcolor="#6986A4">
                     <td id="sideBarCell" valign="top" width="158">
-                        @RenderPage("~/Views/NewsCategory/_ShowList.cshtml", new { CategoryList = ViewBag.NewsCategotyList })
+                        @RenderPage("~/Views/Home/ShowList.cshtml", new { CategoryList = ViewBag.NewsCategotyList })
                     </td>
                 </tr>
             </table>
