--- a/ROC/Views/Shared/_BackedLayout.cshtml
+++ b/ROC/Views/Shared/_BackedLayout.cshtml
@@ -26,7 +26,7 @@
 
                 <ul id="menu">
                     <li>@Html.ActionLink("新闻管理", "Index", "News")</li>
-                    <li>@Html.ActionLink("新闻分类管理", "Index", "News")</li>
+                    <li>@Html.ActionLink("新闻分类管理", "Index", "NewsCategory")</li>
                 </ul>
 
             </div>
