--- a/ROC/Views/Shared/_BackedLayout.cshtml
+++ b/ROC/Views/Shared/_BackedLayout.cshtml
@@ -27,6 +27,7 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("新闻管理", "Index", "News")</li>
                     <li>@Html.ActionLink("新闻分类管理", "Index", "NewsCategory")</li>
+                    <li>@Html.ActionLink("修改密码","ChangePassword","Account")</li>
                 </ul>
 
             </div>
