--- a/ROC/Views/Shared/_Layout.cshtml
+++ b/ROC/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
 
         <div id="header">
             <div id="title">
-                <h1>My MVC Application</h1>
+                <h1>如鸿岁月</h1>
             </div>
             <div id="logindisplay">
                 <a>Welcome</a>
@@ -25,6 +25,7 @@
                 <ul id="menu">
                     <li>@Html.ActionLink("首页", "Index", "Home")</li>
                     <li>@Html.ActionLink("新闻","News","Home")</li>
+                    <li>@Html.ActionLink("项目","Project","Home")</li>
                     <li>@Html.ActionLink("图片故事","PicStory","Home")</li>
                     <li>@Html.ActionLink("关于我们", "About", "Home")</li>
                 </ul>
