--- a/ROC/Views/Home/Index.cshtml
+++ b/ROC/Views/Home/Index.cshtml
@@ -1,77 +1,25 @@
 ﻿@model IList<ROC.Models.News>
            
-@{
-    ViewBag.Title = "Home Page";
-}
 
-@section HeadStaff{
-    <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.smallslider.js")"></script>
-    <link rel="Stylesheet" type="text/css" href="@Url.Content("~/Content/IndexPic/css/smallslider.css")" media="screen" />
-}
 
-<div id="homepage">
+<div id="main">
     <div id="content">
-      <div id="topRow">
-	  
-        <div id="news">
-          
-		  
-          <h2>News</h2>
-          <ul class="headlines">
-          @foreach (var item in Model)
-          {
-            <li><strong>@item.ContentTime.ToShortDateString()</strong> <a href="@Url.Action("NewsDetail", "Home", new { id = item.Id })">@item.Title</a></li>
-          }
-          </ul>
+        <div id="billboard">
+            <article id="mainpic">
+                <img src="@Url.Content("~/Content/images/main.jpg")" alt="人民的胜利" />
+               @* <ul>
+                    <li><a>专题相册</a></li>
+                    <li><a>活动详情</a></li>
+                </ul>*@
+            </article>
         </div>
-		
-		
-		
-        <div class="flash">
-          <div id="flashbox" class="smallslider">
-              <ul>
-                @foreach (var item in ViewBag.IndexPicList)
-                {
-                     <li><a href="#"><img height="100%" width="100%" src="@Url.Content(item)" title="" alt="图片标题" /></a></li>
-                }
-              </ul>
-            </div>
-        </div>
-		
-		
-		
-		
-		
-        <div class="clear">&nbsp;</div>
-		
-      </div>
-      <div id="bottomRow">
-        <a href="#">
-		<img class="floatRight rightCallout" src="" alt="" title="" /></a>
-		
-		<a href="#">
-		<img class="floatRight middleCallout" src="" alt="" title="" /></a>
-		
-		<a href="#">
-		<img class="floatRight leftCallout" src="" alt="" title="" /></a>
+        <aside class="promos">
+				<ul>
+					<li><a href="/Home/historypeople"><img src="@Url.Content("~/Content/images/left.jpg")" alt="岁月相册" width="350" height="250" /></a></li>
+					<li ></li>
+                    <li><a href="/Home/photogallary"><img src="@Url.Content("~/Content/images/right.jpg")" alt="岁月故事" width="350" height="250" /></a></li>
+				</ul>
+		</aside>
 
-      
-      </div>
     </div>
 </div>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#flashbox').smallslider({
-            onImageStop: false,
-            switchEffect: 'fadeOut',
-            switchEase: 'easeOutBounce',
-            switchPath: 'left',
-            switchMode: 'hover',
-            textSwitch: 20,
-            textPosition: 'top',
-            textAlign: 'center'
-            
-        });
-    });
-</script>
