--- a/ROC/Views/Shared/_Layout.cshtml
+++ b/ROC/Views/Shared/_Layout.cshtml
@@ -3,41 +3,66 @@
 <head>
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/Content/Site.css")" rel="stylesheet" type="text/css" />
-    <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="stylesheet" type="text/css" />
+   
     <script src="@Url.Content("~/Scripts/jquery-1.4.4.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/jquery-ui.min.js")" type="text/javascript"></script>
-    <script src="@Url.Content("~/Scripts/EditorHookup.js")" type="text/javascript"></script>
+     <script type="text/javascript">
+         function showNavDiv(i) { document.getElementById('showNavDiv_0' + i).style.visibility = 'visible'; }
+         function hiddenNavDiv(j) { document.getElementById('showNavDiv_0' + j).style.visibility = 'hidden'; }
+    </script>
+   
     @RenderSection("HeadStaff",false)
 </head>
 
 <body>
-    <div class="page">
+   <div class="top">
+            <a href="/Home/Index" class="logoLink" target="mainFrame">
+                <img src="@Url.Content("~/Content/images/head.jpg")" alt="logo" width="300px" height="90px" /></a>
+            <p>
+                <a href="/Home/Index">English</a> <a href="/Home/Index">中文</a>
+            </p>
+        </div>
+        <div class="navBg">
+            <a href="#" onmousemove="showNavDiv(1)" onmouseout="hiddenNavDiv(1)" style="width: 130px;">
+                <img src="@Url.Content("../Content/images/nav_01_01.gif")" />
+            </a><a href="#" onmousemove="showNavDiv(2)" onmouseout="hiddenNavDiv(2)" style="width: 99px;">
+                <img src="@Url.Content("../Content/images/nav_02_01.gif")" />
+            </a><a href="#" onmousemove="showNavDiv(3)" onmouseout="hiddenNavDiv(3)" style="width: 98px;">
+                <img src="@Url.Content("../Content/images/nav_03_01.gif")" />
+            </a>
+        </div>
+        <div class="navContent">
+            <div class="navDivLink" id="showNavDiv_01" style="left: 250px;" onmousemove="showNavDiv(1)"
+                onmouseout="hiddenNavDiv(1)">
+              
+                <a href="">团队活动</a>  <a href="">活动回顾</a> 
+            </div>
+            <div class="navDivLink" id="showNavDiv_02" style="left: 350px;" onmousemove="showNavDiv(2)" onmouseout="hiddenNavDiv(2)">
+              
+                <a href="">人民的胜利</a> <a href="">民国史志</a>
+            </div>
+            <div class="navDivLink" id="showNavDiv_03" style="left: 250px;" onmousemove="showNavDiv(3)"
+                onmouseout="hiddenNavDiv(3)">
+               
+                <a href="">关于网站</a> <a href="">大事记</a> <a href="">宣传册</a> <a href="">鸣谢</a><a href="">版权说明</a> 
+            </div>
+         
 
-        <div id="header">
-            <div id="title">
-                <h1>如鸿岁月</h1>
-            </div>
-            <div id="logindisplay">
-                <a>Welcome</a>
-            </div>
-            <div id="menucontainer">
-                
-                <ul id="menu">
-                    <li>@Html.ActionLink("首页", "Index", "Home")</li>
-                    <li>@Html.ActionLink("新闻","News","Home")</li>
-                    <li>@Html.ActionLink("项目","Project","Home")</li>
-                    <li>@Html.ActionLink("图片故事","PicStory","Home")</li>
-                    <li>@Html.ActionLink("关于我们", "About", "Home")</li>
+        </div>
+
+        @RenderBody()
+
+ <footer id="homefooter">
+            <div class="sosumi">
+                <p class="copyright">
+                    Copyright © 2011 Apple Inc. All rights reserved.</p>
+                <ul class="piped">
+                    <li><a href="/legal/" class="first">Terms of Use</a></li>
+                    <li><a href="/legal/privacy/">Privacy Policy</a></li>
                 </ul>
-
             </div>
-        </div>
+            <!--/sosumi-->
+        </footer>
 
-        <div id="main">
-            @RenderBody()
-            <div id="footer">
-            </div>
-        </div>
-    </div>
+
 </body>
 </html>
