--- a/ROC/Views/Home/About.cshtml
+++ b/ROC/Views/Home/About.cshtml
@@ -1,5 +1,21 @@
-﻿
-<h2>About</h2>
+﻿@{
+    Layout = "~/Views/Shared/NewsLayout.cshtml";
+}
+<input type="hidden" id="pagename" value="about" />
 <p>
-     Put content here.
+<b>
+    关于如鸿岁月网 (chinart1912－1949.com)
+</b>
+</p>
+<p>
+如鸿岁月网 (http://www.chinart1912-1949.com) 是华艺国际文化交流有限公司(美国)旗下的历史数码照片网站，旨在为中国历史研究者提供最为全面与高质量的民国时期(1912-1949)历史照片,用翔实的照片见证历史。
+如鸿岁月网凭借《如鸿岁月》(1912-1949数码档案库的丰富资源,采用互联网对高清历史照片进行展示，对中国历史的研究与推广献出力量。
+</p>
+<p>
+<b>
+关于如鸿岁月数码档案库
+</b>
+</p>
+<p>
+    《如鸿岁月》（1921－1949）数码档案库为华艺国际文化交流有限公司（美国）所有,从1997年开始收集与考证修复,为目前中国最全面的民国时期（1912－1949）历史照片（数码）收录体系，收录达50000张历史数码照片,并有200万相关文字说明。
 </p>
