--- a/ROC/Views/Shared/_Layout.cshtml
+++ b/ROC/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
             <div class="navDivLink" id="showNavDiv_03" style="left: 250px;" onmousemove="showNavDiv(3)"
                 onmouseout="hiddenNavDiv(3)">
                
-                <a href="">关于网站</a> <a href="">大事记</a> <a href="">宣传册</a> <a href="">鸣谢</a><a href="">版权说明</a> 
+                <a href="/Home/About">关于网站</a> <a href="/Home/teamstory">团队大事记</a> <a href="">宣传册</a> <a href="">鸣谢</a><a href="/Home/Copyright">版权说明</a> 
             </div>
          
 
@@ -54,11 +54,9 @@
  <footer id="homefooter">
             <div class="sosumi">
                 <p class="copyright">
-                    Copyright © 2011 Apple Inc. All rights reserved.</p>
-                <ul class="piped">
-                    <li><a href="/legal/" class="first">Terms of Use</a></li>
-                    <li><a href="/legal/privacy/">Privacy Policy</a></li>
-                </ul>
+                    Copyright © china1912-1949.com All Rights Reserve 版权所有 如鸿岁月网保留所有权利
+                   </p>
+                
             </div>
             <!--/sosumi-->
         </footer>
