apply new style add new PhotoShow way
Signed-off-by: billmo <panan.songyu@gmail.com>

--- a/ROC/Views/Home/Index.cshtml
+++ b/ROC/Views/Home/Index.cshtml
@@ -15,9 +15,10 @@
         </div>
         <aside class="promos">
 				<ul>
-					<li><a href="/Home/historypeople"><img src="@Url.Content("~/Content/images/left.jpg")" alt="岁月相册" width="350" height="250" /></a></li>
-					<li ></li>
-                    <li><a href="/Home/photogallary"><img src="@Url.Content("~/Content/images/right.jpg")" alt="岁月故事" width="350" height="250" /></a></li>
+					<li><a href="/Home/photoshow"><img src="@Url.Content("~/Content/images/col1.jpg")" alt="崛起" width="210" height="145" /></a></li>
+					<li><a href="/Home/photoshow"><img src="@Url.Content("~/Content/images/col2.jpg")" alt="铸剑" width="210" height="145" /></a></li>
+                    <li><a href="/Home/photoshow"><img src="@Url.Content("~/Content/images/col3.jpg")" alt="风姿" width="210" height="145" /></a></li>
+                    <li><a href="/Home/photogallary"><img src="@Url.Content("~/Content/images/col4.jpg")" alt="硕果" width="210" height="145" /></a></li>
 				</ul>
 		</aside>
 
