--- a/ROC/Views/Shared/_Layout.cshtml
+++ b/ROC/Views/Shared/_Layout.cshtml
@@ -16,18 +16,22 @@
 <body>
    <div class="top">
             <a href="/Home/Index" class="logoLink" target="mainFrame">
-                <img src="@Url.Content("~/Content/images/head.jpg")" alt="logo" width="300px" height="90px" /></a>
-            <p>
+                <img src="@Url.Content("~/Content/images/head.jpg")" alt="logo" /></a>
+            @*<p>
                 <a href="/Home/Index">English</a> <a href="/Home/Index">中文</a>
-            </p>
+            </p>*@
         </div>
         <div class="navBg">
             <a href="#" onmousemove="showNavDiv(1)" onmouseout="hiddenNavDiv(1)" style="width: 130px;">
-                <img src="@Url.Content("../Content/images/nav_01_01.gif")" />
+               新闻中心  |
             </a><a href="#" onmousemove="showNavDiv(2)" onmouseout="hiddenNavDiv(2)" style="width: 99px;">
-                <img src="@Url.Content("../Content/images/nav_02_01.gif")" />
+              岁月专题  |  
             </a><a href="#" onmousemove="showNavDiv(3)" onmouseout="hiddenNavDiv(3)" style="width: 98px;">
-                <img src="@Url.Content("../Content/images/nav_03_01.gif")" />
+               认识我们 |  
+            </a>
+
+            </a><a href="#" onmousemove="showNavDiv(3)" onmouseout="hiddenNavDiv(3)" style="width: 98px;">
+              岁月专题 
             </a>
         </div>
         <div class="navContent">
