--- a/ROC/Content/Site.css
+++ b/ROC/Content/Site.css
@@ -34,8 +34,8 @@ a:hover{ color:#ff8400}
 .top
 {
 position:relative;
-width:910px;
-height:80px;
+width:980px;
+height:110px;
 margin:0 auto;
 margin-top:6px;
 }
@@ -43,17 +43,18 @@ margin-top:6px;
 .logoLink
 {
 display:block;
-width:180px;
-height:80px;
+width:980px;
+height:110px;
 float:left;
 }
 .logoLink img
 {
 border:none;
 }
-.top p{ position:absolute; width:120px; top:-6px; right:-20px;}
+/*.top p{ position:absolute; width:120px; top:-6px; right:-20px;}
 .top p a{text-decoration:none; margin-left:15px; line-height:40px; color:#414141;}
 .top p a:hover{ color:#E35000}
+*/
 .topTab
 {
 text-align:left;
@@ -79,28 +80,30 @@ color:#9B9B9B;
 }
 .navBg
 {
-width:901px;
-height:16px;
-margin:22px auto 0 300px;
-border-right:1px solid #535154;
+   position:relative;
+width:980px;
+height:25px;
+margin:0px auto;
+/*border-right:1px solid #535154;*/
+background-color:#c21206
 }
 .navBg a
 {
-float:left;
+float:inherit;
 display:inline;
-height:16px;
+height:25px;
 width:150px;
 overflow:hidden;
+background-color:#d25e56;
+font-size:large;
+
 }
-.navBg a img
-{
-border:none;
-}
+
 .navContent
 {
 position:relative;
-width:901px;
-height:39px;
+width:980px;
+height:30px;
 *height:30px;
 margin:0 auto;
 }
@@ -200,11 +203,11 @@ body {TEXT-ALIGN: center;}
 /*begin promos part */
 
 
-.promos ul { width: 800px; height: 250px; margin: 0 -5px; _position: relative; }
-.promos ul li { width: 231px; margin-left: 6px; *margin-left: 7px; display: inline-block; *display: inline; *zoom: 1; padding: 3px; _padding-bottom: 0; background: white;  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -o-border-radius: 5px; -khtml-border-radius: 5px; -webkit-box-shadow: rgba(0,0,0,0.398438) 0 1px 3px; -moz-box-shadow: rgba(0,0,0,0.398438) 0 1px 3px; box-shadow: rgba(0,0,0,0.398438) 0 1px 3px; border: 1px solid; border-color: #e5e5e5 #dbdbdb #d2d2d2; }
+.promos ul { width: 980px; /*height: 250px;*/ margin: 0 -5px; _position: relative; }
+.promos ul li { width: 220px; margin-left: 6px; *margin-left: 7px; display: inline-block; *display: inline; *zoom: 1; padding: 3px; _padding-bottom: 0; /*background: white;  border-radius: 5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; -o-border-radius: 5px; -khtml-border-radius: 5px; -webkit-box-shadow: rgba(0,0,0,0.398438) 0 1px 3px; -moz-box-shadow: rgba(0,0,0,0.398438) 0 1px 3px; box-shadow: rgba(0,0,0,0.398438) 0 1px 3px; border: 1px solid; border-color: #e5e5e5 #dbdbdb #d2d2d2; */}
 .promos ul li:nth-child(1n) { border: none; } /* reset border for smart browsers */
-.promos ul li a { width: 350px; height:250px; margin: 0; padding-top:0; display: block; background: #f5f5f5; background:-webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#eeeeee)); background: -moz-linear-gradient(top, #fafafa, #eeeeee); }
-.promos ul li a:hover { background: #fdfdfd; background: -webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#fafafa)); background: -moz-linear-gradient(top, #fdfdfd, #fafafa); }
+.promos ul li a { width: 240px; /*height:250px;*/ margin: 0; padding-top:0; display: block; /*background: #f5f5f5; background:-webkit-gradient(linear, left top, left bottom, from(#fafafa), to(#eeeeee)); background: -moz-linear-gradient(top, #fafafa, #eeeeee);*/ }
+.promos ul li a:hover { /*background: #fdfdfd; background: -webkit-gradient(linear, left top, left bottom, from(#fdfdfd), to(#fafafa)); background: -moz-linear-gradient(top, #fdfdfd, #fafafa); */}
 .promos ul li a img { margin: 0; display: block; }
 
 
